<resources>
    <string name="app_name">TtRCalc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">Title Text</string>
    <string name="train_text">##</string>
    <string name="score_text">###</string>

    <string name="hint_text">Player Name</string>
    <string name="apply">Apply</string>

    <string name="claim">Claim</string>
    <string name="route_length">Route Length</string>

    <string name="route_one">1</string>
    <string name="route_two">2</string>
    <string name="route_three">3</string>
    <string name="route_four">4</string>
    <string name="route_five">5</string>
    <string name="route_six">6</string>

    <string name="none">None Selected</string>
</resources>
