<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/claimTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:text="@string/title_text"
        android:textColor="@color/textDark"
        />

    <TextView
        android:id="@+id/claimScore"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/claimTitle"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:text="@string/score_text"
        android:textColor="@color/textDark"
        />

    <TextView
        android:id="@+id/routeLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/claimTitle"
        android:text="@string/route_length"
        android:textColor="@color/textDark"
        />

    <RadioGroup
        android:id="@+id/routeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_below="@id/routeLength">

        <RadioButton
            android:id="@+id/routeLengthOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_one"
            android:textColor="@color/textDark"
            />

        <RadioButton
            android:id="@+id/routeLengthTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_two"
            android:textColor="@color/textDark"
            />

        <RadioButton
            android:id="@+id/routeLengthThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_three"
            android:textColor="@color/textDark"
            />

        <RadioButton
            android:id="@+id/routeLengthFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_four"
            android:textColor="@color/textDark"
            />

        <RadioButton
            android:id="@+id/routeLengthFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_five"
            android:textColor="@color/textDark"
            />

        <RadioButton
            android:id="@+id/routeLengthSix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_six"
            android:textColor="@color/textDark"
            />

    </RadioGroup>

    <Button
        android:id="@+id/claimButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/claim"
        android:textColor="@color/textDark"
        />

</RelativeLayout>